add newest item stat

--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -70,6 +70,7 @@
             <span>Library Size: @Functions.FormatBytes(librarySize)</span>
             string url = $"/view/{oldestItem.uuid}";
             <span><a target="_blank" rel="noopener noreferrer" href="@url">Oldest Item in Library, Taken on @oldestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
+            <span><a target="_blank" rel="noopener noreferrer" href="@url">Newest Item in Library, Taken on @newestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
         }
     </div>
 </div>
@@ -201,5 +202,6 @@
         librarySize = dirInfo.EnumerateFiles("*", SearchOption.AllDirectories).Sum(file => file.Length);
 
         oldestItem = Stats.FindOldestItem();
+        newestItem = Stats.FindNewestItem();
     }
 }
