add when server went online and how long it's been online

--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -71,6 +71,8 @@
             string url = $"/view/{oldestItem.uuid}";
             <span><a target="_blank" rel="noopener noreferrer" href="@url">Oldest Item in Library, Taken on @oldestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
             <span><a target="_blank" rel="noopener noreferrer" href="@url">Newest Item in Library, Taken on @newestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
+            <span>Server went online at @whenWentOnline</span>
+            <span>Server has been online for @(DateTime.Now - whenWentOnline)</span>
         }
     </div>
 </div>
@@ -106,6 +108,7 @@
     private static long freeDriveSpace; //Bytes
     private static long librarySize; //Bytes
     private static Connection.MediaRow oldestItem, newestItem;
+    public static DateTime whenWentOnline; //When did the server go online?
 
     protected override void OnInitialized()
     {
