--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -38,6 +38,11 @@
         </div>
 
         <div class="settings-pair">
+            <span>Where to backup library and database</span>
+            <input type="text" class="settings-pair" @bind="@backupFolderPath"/>
+        </div>
+        
+        <div class="settings-pair">
             <span style="display: inline">Show Prompts?</span>
             <input type="checkbox" class="settings-pair" @bind="@showPrompts"/>
         </div>
@@ -49,6 +54,8 @@
 
     <div>
         <span class="header">Maintenance</span>
+        <button class="textBtn"><span class="material-icons-outlined">backup</span><span>Backup Server</span></button>
+        <button class="textBtn"><span class="material-icons-outlined">restore</span><span>Restore Backup</span></button>
         @if (!maintenanceLoaded) {<button class="textBtn" @onclick="@RunMaintenanceCheck"><span class="material-icons-outlined">build</span><span>Run Maintenance Check</span></button>}
         @if (maintenanceLoaded)
         {
@@ -85,6 +92,7 @@
     private static string uploadRootPath = PSS.Settings.uploadRootPath;
     private static string libraryRootPath = PSS.Settings.libFolderFullPath;
     private static bool showPrompts = PSS.Settings.showPrompts;
+    private static string backupFolderPath = PSS.Settings.backupFolderPath;
     
     //Maintenance
     private static bool maintenanceLoaded;
@@ -148,6 +156,7 @@
         PSS.Settings.uploadRootPath = uploadRootPath;
         PSS.Settings.libFolderFullPath = libraryRootPath;
         PSS.Settings.showPrompts = showPrompts;
+        PSS.Settings.backupFolderPath = backupFolderPath;
         PSS.Settings.WriteSettings();
     }
 
@@ -159,6 +168,7 @@
         uploadRootPath = PSS.Settings.uploadRootPath;
         libraryRootPath = PSS.Settings.libFolderFullPath;
         showPrompts = PSS.Settings.showPrompts;
+        backupFolderPath = PSS.Settings.backupFolderPath;
     }
 
     private static void ResetBtnClicked()
