--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -55,7 +55,7 @@
     <div>
         <span class="header">Maintenance</span>
         <button class="textBtn" @onclick="@M.BackupServer"><span class="material-icons-outlined">backup</span><span>Backup Server</span></button>
-        <button class="textBtn"><span class="material-icons-outlined">restore</span><span>Restore Backup</span></button>
+        <button class="textBtn" @onclick="@M.RestoreBackup"><span class="material-icons-outlined">restore</span><span>Restore Backup</span></button>
         @if (!maintenanceLoaded) {<button class="textBtn" @onclick="@RunMaintenanceCheck"><span class="material-icons-outlined">build</span><span>Run Maintenance Check</span></button>}
         @if (maintenanceLoaded)
         {
