Now can show Folder is Empty when appropriate

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -48,7 +48,12 @@
 
     if (albumMedia.Count == 0)
     {
-        <h1>Album is empty</h1>
+        if (IsFolder(statAlbumID)) {
+            <h1>Folder is empty</h1>
+        }
+        else {
+            <h1>Album is empty</h1>
+        }
     }
     else
     {
