--- a/PSS/Shared/AlbumSelector.razor
+++ b/PSS/Shared/AlbumSelector.razor
@@ -14,38 +14,42 @@
     
     <div id="albumCreatorDiv"><AlbumCreator Albums="@(albums.Concat(folders).ToList())"/></div>
 
-    @* <div class="albumsList"> *@
-    @*     @for (int i = 0; i < albums.Count; i++) *@
-    @*     { *@
-    @*         int ii = i; *@
-    @*         <div @onclick="@(() => checkedAlbums[ii] = !checkedAlbums[ii])" class="album"> *@
-    @*             <div class="coverDiv"> *@
-    @*                 <img class="cover" src="@Settings.requestPath/@albums[i].albumCover" alt=""> *@
-    @*             </div> *@
-    @*             <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput"> *@
-    @*             <span title="@albums[i].name">@albums[i].name</span> *@
-    @*         </div> *@
-    @*     } *@
-    @* </div> *@
-
-    @* <div class="foldersList"> *@
-    @*    @for (int i = 0; i < folders.Count; i++) *@
-    @*    { *@
-    @*        int ii = i; *@
-    @*        <div @onclick="@(() => checkedFolderIndex = ii)" class="album"> *@
-    @*            <div class="coverDiv"> *@
-    @*                <img class="cover" src="@Settings.requestPath/@folders[i].albumCover" alt=""> *@
-    @*            </div> *@
-    @*            <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput"> *@
-    @*            <span title="@folders[i].name">@folders[i].name</span> *@
-    @*        </div> *@
-    @*    } *@
-    @* </div> *@
+    <div class="albumsAndFolders">
+        <span>Albums</span>
+        <div class="albumsList">
+            @for (int i = 0; i < albums.Count; i++)
+            {
+                int ii = i;
+                <div @onclick="@(() => checkedAlbums[ii] = !checkedAlbums[ii])" class="album">
+                    <div class="coverDiv">
+                        <img class="cover" src="@Settings.requestPath/@albums[i].albumCover" alt="">
+                    </div>
+                    <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
+                    <span title="@albums[i].name">@albums[i].name</span>
+                </div>
+            }
+        </div>
+    
+        <span>Folders</span>
+        <div class="albumsList">
+            @for (int i = 0; i < folders.Count; i++)
+            {
+                int ii = i;
+                <div @onclick="@(() => { checkedFolderIndex = ii; })" class="album">
+                    <div class="coverDiv">
+                        <img class="cover" src="@Settings.requestPath/@folders[i].albumCover" alt="">
+                    </div>
+                    <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
+                    <span title="@folders[i].name">@folders[i].name</span>
+                </div>
+            }
+        </div>
+    </div>
 </div>
 
 @code {
-    private static List<Album> albums = GetAlbumsTable(true, false);
-    private static List<Album> folders = GetAlbumsTable(false, true);
+    private static List<Album> albums;
+    private static List<Album> folders;
 
     private static List<bool> checkedAlbums;
     private static int checkedFolderIndex; //Which index in folders is checked (can only have 1 checked (true)).
@@ -73,10 +77,11 @@
 
     protected override void OnInitialized()
     {
+        albums = GetAlbumsTable(true, false);
+        folders = GetAlbumsTable(false, true);
+        checkedAlbums = (from album in albums select new bool()).ToList();
         AlbumsVis = "hidden";
         HeaderVis = "hidden";
-        albums = GetAlbumsTable(true, true);
-        checkedAlbums = (from album in albums select new bool()).ToList();
     }
 
     //Closing the div for selecting album(s) to add selected items to.
