--- a/PSS/Shared/AlbumSelector.razor
+++ b/PSS/Shared/AlbumSelector.razor
@@ -20,7 +20,7 @@
             @for (int i = 0; i < albums.Count; i++)
             {
                 int ii = i;
-                <div @onclick="@(() => checkedAlbums[ii] = !checkedAlbums[ii])" class="album">
+                <div @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })" class="album">
                     <div class="coverDiv">
                         <img class="cover" src="@Settings.requestPath/@albums[i].albumCover" alt="">
                     </div>
@@ -35,11 +35,11 @@
             @for (int i = 0; i < folders.Count; i++)
             {
                 int ii = i;
-                <div @onclick="@(() => { checkedFolderIndex = ii; })" class="album">
+                <div class="album" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
                     <div class="coverDiv">
                         <img class="cover" src="@Settings.requestPath/@folders[i].albumCover" alt="">
                     </div>
-                    <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
+                    <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
                     <span title="@folders[i].name">@folders[i].name</span>
                 </div>
             }
@@ -52,6 +52,7 @@
     private static List<Album> folders;
 
     private static List<bool> checkedAlbums;
+    private static List<bool> checkedFolders;
     private static int checkedFolderIndex; //Which index in folders is checked (can only have 1 checked (true)).
     
     [Parameter] //Needs to be passed in
@@ -80,6 +81,8 @@
         albums = GetAlbumsTable(true, false);
         folders = GetAlbumsTable(false, true);
         checkedAlbums = (from album in albums select new bool()).ToList();
+        checkedFolders = (from album in albums select new bool()).ToList();
+        checkedFolderIndex = -1; //-1 = a folder isn't picked
         AlbumsVis = "hidden";
         HeaderVis = "hidden";
     }
@@ -103,6 +106,16 @@
         await HeaderVisChanged.InvokeAsync("hidden");
     }
 
+    private static void ClearAlbumChecks()
+    {
+        for (int i = 0; i < checkedAlbums.Count; i++) checkedAlbums[i] = false;
+    }
+
+    private static void ClearFolderChecks()
+    {
+        for (int i = 0; i < checkedFolders.Count; i++) checkedFolders[i] = false;
+    }
+    
     //Add item(s) to album(s) selected.
     private async void ConfirmBtnClick()
     {
